# gltfsnap

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  actionset.h  buffer.cpp  buffer.h  gl.c  gltf.cpp  gltf.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  shaders.cpp  shaders.h
